# px4-gazebo-v1.14-jumpstart

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml
colcon_ws/: rtps_config.xml
colcon_ws/src/dasc_robot_gui/: CMakeLists.txt  package.xml  plugin_description.xml
colcon_ws/src/dasc_robot_gui/src/: teleop_panel.cpp  teleop_panel.hpp
colcon_ws/src/forest_gen/: CMakeLists.txt  genWorlds.py  package.xml  plotWorld.py
colcon_ws/src/forest_gen/easy_worlds/: forest0.csv  forest0.world  forest1.csv  forest1.world  forest2.csv  forest2.world  forest3.csv  forest3.world  forest4.csv  forest4.world  forest5.world  forest6.world  forest7.world  forest8.world  forest9.world
colcon_ws/src/forest_gen/hard_worlds/: forest0.csv  forest0.world  forest1.csv  forest1.world  forest2.csv  forest2.world  forest3.csv  forest3.world  forest4.csv  forest4.world  forest5.world  forest6.world  forest7.world  forest8.world  forest9.world
colcon_ws/src/forest_gen/medium_worlds/: forest0.csv  forest0.world  forest1.csv  forest1.world  forest2.csv  forest2.world  forest3.csv  forest3.world  forest4.csv  forest4.world  forest5.world  forest6.world  forest7.world  forest8.world  forest9.world
colcon_ws/src/forest_gen/simple_worlds/: forest0.world  forest1.world  forest2.world  forest3.world  forest4.world  forest5.world  forest6.world  forest7.world  forest8.world  forest9.world  template
colcon_ws/src/forest_gen/worlds/: forest0.world
colcon_ws/src/gazebo_px4_bridge/: CMakeLists.txt  package.xml
colcon_ws/src/sim_launch/: CMakeLists.txt  package.xml
(+5 files in other folders)
